--- a/app/styles/components/map/c-search-panel.scss
+++ b/app/styles/components/map/c-search-panel.scss
@@ -7,6 +7,7 @@
     background-color: transparent;
     border: 0;
     border-bottom: 1px solid $color-4;
+    border-radius: 0;
     color: $color-4;
     display: block;
 
