--- a/app/styles/components/map/c-no-login.scss
+++ b/app/styles/components/map/c-no-login.scss
@@ -16,6 +16,7 @@
   > .content > p {
     color: $color-4;
     font-size: $font-size-x-small;
+    margin: 25px 0px;
 
     &.paragraph-back {
       font-size: $font-size-small;
@@ -32,7 +33,7 @@
     font-size: $font-size-x-small;
     font-weight: $font-weight-bold;
     letter-spacing: -.1px;
-    margin: 35px 0;
+    margin: 10px 0;
     padding: 10px 25px;
     text-transform: uppercase;
   }
