--- a/app/styles/components/map/c-no-login.scss
+++ b/app/styles/components/map/c-no-login.scss
@@ -1,33 +1,44 @@
 @import '../../settings';
 
 .c-no-login {
-  font-family: $font-family-1;
-  position: relative;
-  text-align: center;
-
-  > .back {
-    font-size: $font-size-x-small;
-    left: -30px;
-    position: absolute;
-    top: -30px;
-
-    > a  {
-      color: $color-4;
-    }
-  }
 
   > .title {
-    font-size: $font-size-x-medium;
-    font-weight: $font-weight-normal;
-    margin-bottom: 10px;
+    font-size: $font-size-x-normal;
+    font-weight: $font-weight-bold;
+    margin: 0 0 10px;
+    text-align: center;
   }
 
   > .content {
-    color: $color-4;
-    margin: 10px 0;
+    text-align: center;
   }
 
-  a {
+  > .content > p {
+    color: $color-4;
+    font-size: $font-size-x-small;
+    margin: 25px 0px;
+
+    &.paragraph-back {
+      font-size: $font-size-small;
+      line-height: 1.2;
+    }
+  }
+
+  > .content > .btn-action {
+    background-color: $color-3;
+    border: 0;
+    color: $color-4;
+    cursor: pointer;
+    display: inline-block;
+    font-size: $font-size-x-small;
+    font-weight: $font-weight-bold;
+    letter-spacing: -.1px;
+    margin: 10px 0;
+    padding: 10px 25px;
+    text-transform: uppercase;
+  }
+
+  > .content .back {
     color: $color-4;
     cursor: pointer;
     display: inline-block;
@@ -37,7 +48,7 @@
       content: '';
       display: block;
       height: 1px;
-      margin-top: 1px;
+      margin: 1px 0 0;
     }
   }
 }
