Toggle panel styles and functionality

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -15,9 +15,11 @@ $max-map-footer-height: 485px;
 $header-height: 95px;
 $accordion-mobile-height: 60px;
 
+
 // Map
 $timebar-height: 70px;
 $duration-picker-height: 24px;
+$report-panel-menu-height: 48px;
 
 
 // Font sizes
