--- a/app/styles/components/map/c-report-panel.scss
+++ b/app/styles/components/map/c-report-panel.scss
@@ -145,6 +145,7 @@
     font-size: $font-size-x-small;
     font-weight: $font-weight-bold;
     letter-spacing: -.1px;
+    outline: none;
     padding: 15px 0;
     text-transform: uppercase;
     width: 50%;
