--- a/app/styles/components/map/c-layer-blending.scss
+++ b/app/styles/components/map/c-layer-blending.scss
@@ -1,21 +1,23 @@
 @import '../../settings';
 
-.c-opacity-selector {
+.c-blending {
   cursor: default;
-  display: flex;
-  flex-basis: 100%;
-  max-height: 0;
-  overflow: hidden;
-
-  transition: max-height .25s ease;
+  display: block;
+  opacity: 0;
+  position: absolute;
+  width: 200px;
+  background-color: $color-19;
+  bottom: 40px;
+  padding: 20px;
+  transition: opacity .25s ease;
 
   &.-is-visible {
     margin: 10px 0 5px;
-    max-height: 40px;
+    opacity: 1;
     overflow: visible;
   }
 
-  :global .opacity-range {
+  :global .blending-range {
     appearance: none;
     background: transparent;
     height: 40px;
