--- a/app/styles/components/map/c-layer-list.scss
+++ b/app/styles/components/map/c-layer-list.scss
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+    position: relative;
 
     &:not(:first-child) {
       margin: 5px 0 0;
