--- a/app/styles/components/map/c-layer-list.scss
+++ b/app/styles/components/map/c-layer-list.scss
@@ -10,8 +10,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 100%;
     position: relative;
+    width: 100%;
 
     &:not(:first-child) {
       margin: 5px 0 0;
@@ -62,6 +62,11 @@
         &:not(:first-child) {
           margin: 0 0 0 10px;
         }
+
+      }
+
+      .-highlighted path {
+        fill: $color-4;
       }
     }
 
