per-layer reporting

--- a/app/styles/components/map/c-layer-list.scss
+++ b/app/styles/components/map/c-layer-list.scss
@@ -61,6 +61,9 @@
         &:not(:first-child) {
           margin: 0 0 0 10px;
         }
+        .-highlighted path {
+          fill: $color-4;
+        }
       }
     }
 
