--- a/app/styles/components/map/c-polygon-report.scss
+++ b/app/styles/components/map/c-polygon-report.scss
@@ -2,17 +2,40 @@
 
 .c-polygon-report {
   background: $color-13;
+  bottom: 120px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   left: -50%;
+  height: 120px;
   opacity: .95;
-  width: 300px;
+  padding: 24px;
+  width: 220px;
+
+  .title, .description, .add {
+    color: $color-4;
+    font-family: $font-family-1;
+    font-size: 15px;
+  }
+
+  .title, .add {
+    text-transform: capitalize;
+    font-weight: bold;
+  }
 
   .close {
-    background: green;
+    top: 0;
+    right: -26px;
   }
 
   .add {
-    background: lime;
+    margin-top: 20px;
+    &::before {
+      background: $color-4;
+      color: $color-13;
+      content: '+';
+      display: inline-block;
+      margin-right: 4px;
+      width: 20px;
+    }
   }
 }
 
