--- a/app/styles/components/map/c-polygon-report.scss
+++ b/app/styles/components/map/c-polygon-report.scss
@@ -4,23 +4,22 @@
   background: $color-13;
   bottom: 10px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .5);
-  height: 120px;
-  left: -110px;
+  left: -130px;
   opacity: .95;
   padding: 24px;
   position: absolute;
-  width: 220px;
+  width: 260px;
 
   .title,
   .description,
-  .add {
+  .toggle {
     color: $color-4;
     font-family: $font-family-1;
     font-size: 15px;
   }
 
   .title,
-  .add {
+  .toggle {
     font-weight: bold;
     text-transform: uppercase;
   }
@@ -33,7 +32,7 @@
     top: 0;
   }
 
-  .add {
+  .toggle {
     cursor: pointer;
     margin-top: 20px;
 
@@ -45,10 +44,16 @@
       margin-right: 8px;
       width: 20px;
     }
+
+    &.-remove {
+      &::before {
+        content: '-';
+      }
+    }
   }
 
   .close,
-  .add {
+  .toggle {
     &:focus {
       outline: none;
     }
