--- a/app/styles/components/map/c-report-panel.scss
+++ b/app/styles/components/map/c-report-panel.scss
@@ -153,5 +153,10 @@
     &:not(:first-child) {
       border-left: 1px solid rgba($color-19, .3);
     }
+
+    &.-disabled {
+      color: rgba($color-19, .5);
+      pointer-events: none;
+    }
   }
 }
