Restored Marine Traffic link

--- a/app/styles/components/c-vessel-info-panel.scss
+++ b/app/styles/components/c-vessel-info-panel.scss
@@ -47,6 +47,7 @@
       font-family: $font-family-1;
       font-size: $font-size-xxs-small;
       margin: 15px 0 0;
+      text-decoration: underline;
     }
 
     .rfmo-list {
