Added button layer styles

--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -151,6 +151,23 @@
       }
     }
 
+    > .layer-management {
+      display: flex;
+      justify-content: space-between;
+      margin: 10px 0 0;
+
+      > .layer-button {
+        border: 1px solid $color-3;
+        color: $color-3;
+        cursor: pointer;
+        font-size: $font-size-xxs-small;
+        font-weight: $font-weight-bold;
+        outline: none;
+        padding: 5px;
+        text-transform: uppercase;
+        width: calc(50% - 2px);
+      }
+    }
 
     :global .react-sanfona-item-body {
       background: rgba($color-1, .8);
