--- a/app/styles/components/map/c-button.scss
+++ b/app/styles/components/map/c-button.scss
@@ -1,16 +1,30 @@
 @import '../../settings';
 
 .c-button {
-  border: 0;
+  background-color: $color-1;
+  border: 1px solid rgba($color-3, .3);
+  color: $color-3;
   cursor: pointer;
+  font-size: $font-size-xs-small;
+  font-weight: $font-weight-bold;
+  height: 30px;
+  outline: none;
+  text-align: center;
+  text-transform: uppercase;
+
+  &.-disabled {
+    border: 1px solid rgba($color-3, .25);
+    color: rgba($color-3, .5);
+    pointer-events: none;
+  }
 
   &.-filled {
     background-color: $color-3;
+    border: 0;
     color: $color-4;
-    font-size: $font-size-x-small;
-    font-weight: $font-weight-bold;
-    padding: 15px 0;
-    text-align: center;
-    text-transform: uppercase;
+  }
+
+  &.-big {
+    height: 40px;
   }
 }
