--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -42,3 +42,23 @@
   height: 3px;
   width: 13px;
 }
+
+.icon-close {
+  cursor: pointer;
+  height: 8px;
+  width: 8px;
+}
+
+.info-icon {
+  cursor: pointer;
+}
+
+.blending-icon {
+  cursor: pointer;
+}
+
+.pin-icon {
+  cursor: pointer;
+  height: 16px;
+  width: 11px;
+}
