Search panel redesign

--- a/app/styles/components/map/c-pinned-tracks.scss
+++ b/app/styles/components/map/c-pinned-tracks.scss
@@ -6,7 +6,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
-    margin: 0 0 100px;
+    margin: 10px 0 100px;
 
     > .no-pin-literal {
       color: $color-4;
