--- a/app/styles/components/map/c-search-panel.scss
+++ b/app/styles/components/map/c-search-panel.scss
@@ -1,4 +1,5 @@
 @import '../../settings';
+@import '../../mixins';
 
 .c-search-panel {
   position: relative;
@@ -6,13 +7,13 @@
   > .search-accordion {
     background-color: transparent;
     border: 0;
-    border-bottom: 1px solid $color-4;
+    border-bottom: 1px solid rgba($color-3, .3);
     border-radius: 0;
     color: $color-4;
     display: block;
 
     font-size: $font-size-x-small;
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-normal;
     line-height: 1.8;
 
     outline: 0;
@@ -53,22 +54,48 @@
     cursor: pointer;
   }
 
-  > .result-list {
+  .results-container {
+    background-color: $color-1;
     max-height: 0;
-    overflow-y: auto;
-    transition: max-height .25s ease;
+    overflow: hidden;
+    position: relative;
+    width: 310px;
 
-    &.-open {
-      margin: 10px 0 0;
-      max-height: 200px;
+    &::after {
+      @include arrow(15px, 1px, rgba($color-3, .3), 'up');
+      background-color: $color-1;
+      left: 30px;
+      position: absolute;
+      top: -8px;
     }
 
+    &.-open {
+      border: 1px solid rgba($color-3, .3);
+      left: -20px;
+      max-height: none;
+      overflow: visible;
+      padding: 15px 15px 0;
+      position: absolute;
+      top: 34px;
+    }
+  }
+
+  .results-container > .result-list {
+    padding: 0 0 15px;
+
     > .result {
-      color: rgba($color-4, .7);
+      background-color: transparent;
+      border-radius: 4px;
+      color: rgba($color-4, .3);
       cursor: pointer;
       font-size: $font-size-small;
       line-height: 1.3;
+      padding: 6px 10px;
       position: relative;
+
+      &:hover {
+        background-color: rgba($color-3, .2);
+      }
 
       .highlight {
         color: $color-4;
@@ -76,8 +103,23 @@
       }
 
       &:not(:first-child) {
-        margin: 15px 0 0;
+        margin: 5px 0 0;
       }
+    }
+
+    > .search-message {
+      color: $color-4;
+      font-size: $font-size-xs-small;
+    }
+  }
+
+  .results-container > .pagination-container {
+    display: flex;
+    justify-content: center;
+    padding: 5px 0 25px;
+
+    > .more-results-button {
+      width: 130px;
     }
   }
 }
