--- a/app/styles/components/map/c-search-panel.scss
+++ b/app/styles/components/map/c-search-panel.scss
@@ -80,36 +80,15 @@
     }
   }
 
-  .results-container > .result-list {
+  .results-container > .search-list {
     padding: 0 0 15px;
 
     > .result {
-      background-color: transparent;
-      border-radius: 4px;
-      color: rgba($color-4, .3);
-      cursor: pointer;
-      font-size: $font-size-small;
-      line-height: 1.3;
-      padding: 6px 10px;
-      position: relative;
-
-      &:hover {
-        background-color: rgba($color-3, .2);
-      }
-
-      .highlight {
-        color: $color-4;
-        font-weight: $font-weight-bold;
-      }
+      width: 100%;
 
       &:not(:first-child) {
         margin: 5px 0 0;
       }
-    }
-
-    > .search-message {
-      color: $color-4;
-      font-size: $font-size-xs-small;
     }
   }
 
