--- a/app/styles/components/shared/c-paginator.scss
+++ b/app/styles/components/shared/c-paginator.scss
@@ -4,42 +4,52 @@
   align-items: center;
   display: flex;
 
-  > .previous,
-  > .next {
-    cursor: pointer;
-  }
-
   > .page-list {
     display: flex;
     margin: 0 50px;
   }
 
-  > .page-list > .page-item {
-    color: $color-4;
-    cursor: pointer;
-    font-size: $font-size-x-small;
-    font-weight: $font-weight-bold;
+  > .page-list {
 
-    &:not(:first-child) {
-      margin: 0 0 0 25px;
+    > .previous {
+      cursor: pointer;
+      margin-right: 50px;
+      transform: scaleX(-1);
     }
 
-    &.-current {
-      color: $color-3;
-      position: relative;
+    > .next {
+      cursor: pointer;
+      margin-left: 50px;
+    }
 
-      &::before {
-        background: $color-3;
-        border-radius: 100px;
-        bottom: -5px;
-        content: '';
-        display: inline-block;
-        height: 4px;
-        left: 50%;
-        min-width: 16px;
-        position: absolute;
-        transform: translate(-50%, 0);
-        width: 100%;
+    > .page-item {
+      color: $color-4;
+      cursor: pointer;
+      font-size: $font-size-x-small;
+      font-weight: $font-weight-bold;
+      margin: 3px 0 0 25px;
+
+      &:nth-child(2) {
+        margin: 3px 0 0 0px;
+      }
+
+      &.-current {
+        color: $color-3;
+        position: relative;
+
+        &::before {
+          background: $color-3;
+          border-radius: 100px;
+          bottom: 4px;
+          content: '';
+          display: inline-block;
+          height: 4px;
+          left: 50%;
+          min-width: 16px;
+          position: absolute;
+          transform: translate(-50%, 0);
+          width: 100%;
+        }
       }
     }
   }
