--- a/app/styles/components/shared/c-paginator.scss
+++ b/app/styles/components/shared/c-paginator.scss
@@ -24,10 +24,13 @@
 
     > .page-item {
       color: $color-4;
-      cursor: pointer;
       font-size: $font-size-x-small;
       font-weight: $font-weight-bold;
       margin: 3px 0 0 25px;
+
+      > a {
+        cursor: pointer;
+      }
 
       &:nth-child(2) {
         margin: 3px 0 0 0px;
