--- a/app/styles/components/shared/c-paginator.scss
+++ b/app/styles/components/shared/c-paginator.scss
@@ -11,29 +11,37 @@
 
   > .page-list {
 
-    > .previous {
+    > .previous,
+    > .next {
       cursor: pointer;
-      margin-right: 50px;
-      transform: scaleX(-1);
+
+      &.-disabled {
+        fill: rgba($color-3, .3);
+        pointer-events: none;
+      }
+    }
+
+    > .previous {
+      margin: 0 50px 0 0;
+      transform: rotateY(180deg);
     }
 
     > .next {
-      cursor: pointer;
-      margin-left: 50px;
+      margin: 0 0 0 50px;
     }
 
     > .page-item {
       color: $color-4;
       font-size: $font-size-x-small;
       font-weight: $font-weight-bold;
-      margin: 3px 0 0 25px;
+      margin: 0 0 0 25px;
 
       > a {
         cursor: pointer;
       }
 
       &:nth-child(2) {
-        margin: 3px 0 0 0px;
+        margin: 0;
       }
 
       &.-current {
