--- a/app/styles/components/map/c-layer-blending.scss
+++ b/app/styles/components/map/c-layer-blending.scss
@@ -10,13 +10,13 @@
   max-height: 0;
   overflow: hidden;
   text-transform: uppercase;
+  z-index: 10;
 
   @media #{$mq-tablet} {
     background-color: $color-1;
     border: solid 1px rgba($color-3, .4);
     bottom: 30px;
     display: none;
-    opacity: .9;
     padding: 20px;
     position: absolute;
     right: 0;
