limit polygon name size

--- a/app/styles/components/map/c-report-panel.scss
+++ b/app/styles/components/map/c-report-panel.scss
@@ -103,7 +103,11 @@
       > .polygon-name {
         color: $color-1;
         font-size: $font-size-xxs-small;
+        overflow: hidden;
+        text-overflow: ellipsis;
         text-transform: uppercase;
+        white-space: nowrap;
+        width: 240px;
       }
 
       > .polygon-remove {
