--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -11,6 +11,7 @@ $wrap-tablet: 55px;
 $wrap-desktop: 115px;
 $map-footer-height: 38px;
 $max-map-footer-height: 485px;
+$offset-panel-control: 20px;
 
 $header-height: 95px;
 $accordion-mobile-height: 60px;
