--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -45,8 +45,8 @@
 
 .icon-close {
   cursor: pointer;
-  height: 8px;
-  width: 8px;
+  height: 10px;
+  width: 10px;
 }
 
 .info-icon {
@@ -55,6 +55,13 @@
 
 .blending-icon {
   cursor: pointer;
+  fill: $color-19;
+  height: 15px;
+  width: 15px;
+
+  &.-white {
+    fill: $color-4;
+  }
 }
 
 .pin-icon {
