close report infowindow on click outside

--- a/app/styles/components/map/c-polygon-report.scss
+++ b/app/styles/components/map/c-polygon-report.scss
@@ -19,6 +19,11 @@
   }
 
   .title,
+  .description {
+    pointer-events: none;
+  }
+
+  .title,
   .toggle {
     font-weight: bold;
     text-transform: uppercase;
