--- a/app/styles/components/map/c-pinned-tracks.scss
+++ b/app/styles/components/map/c-pinned-tracks.scss
@@ -36,6 +36,7 @@
       background-color: transparent;
       border: 0;
       color: $color-4;
+      cursor: pointer;
       flex: 1;
       font-family: $font-family-1;
       font-size: $font-size-xxs-small;
