Fixed filters styles

--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -64,6 +64,13 @@
   }
 }
 
+.delete-cross-icon {
+  cursor: pointer;
+  fill: $color-19;
+  height: 31px;
+  width: 31px;
+}
+
 .pin-icon {
   cursor: pointer;
   height: 16px;
