--- a/app/styles/components/map/c-pinned-tracks.scss
+++ b/app/styles/components/map/c-pinned-tracks.scss
@@ -2,8 +2,6 @@
 
 .c-pinned-tracks {
   margin: 10px 0 0;
-  min-height: 135px;
-  position: relative;
 
   > .no-pinned-items {
     align-items: center;
@@ -77,12 +75,9 @@
   }
 
   > .pinned-button-container {
-    bottom: 0;
     display: flex;
     justify-content: space-between;
-    left: 0;
-    position: absolute;
-    width: 100%;
+    margin: 10px 0 0;
 
     > .pinned-button {
       width: calc(50% - 1px);
