--- a/app/styles/components/map/c-recent-vessels.scss
+++ b/app/styles/components/map/c-recent-vessels.scss
@@ -2,30 +2,53 @@
 
 .c-recent-vessels {
 
-  > .empty-history {
-    margin: 30px 0;
+  .empty-history {
+    margin: 30px 0 25px;
     text-align: center;
   }
 
-  > .history-list {
+  > .history-container {
     margin: 45px 0 0;
-    max-height: 275px;
-    overflow-y: auto;
+    overflow: scroll;
+    padding: 0 0 5px;
+    position: relative;
+
+    &::after {
+      background-image: linear-gradient(to bottom, rgba(4, 20, 56, 0), $color-2);
+      bottom: 25px;
+      content: '';
+      display: inline-block;
+      height: 25px;
+      left: 0;
+      position: relative;
+      width: 100%;
+    }
   }
 
-  > .history-list > .history-item {
+  .history-list {
+    max-height: 225px;
+    overflow-y: auto;
+    padding: 0 0 8px;
+  }
+
+  .history-list > .history-item {
     align-items: center;
     display: flex;
     flex: 0 0 33.333%;
     margin: 0 0 15px;
-    overflow-y: hidden;
+    max-width: 33.333%;
     padding: 0 10px 0 0;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+
 
     > .pinned {
       fill: rgba($color-3, .5);
       margin: 0 8px 0 0;
+    }
+
+    > .history-item-name {
+      overflow-y: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     &:hover {
